[metadata]
name = maratonatechrs
version = attr: maratonatechrs._version.__version__
description = attr: maratonatechrs.__description__
summary = attr: maratonatechrs.__description__
author = Iuri Guilherme
author_email = 2027447+iuriguilherme@users.noreply.github.com
maintainer = Iuri Guilherme
maintainer_email = 2027447+iuriguilherme@users.noreply.github.com
home_page = https://iuri.xyz/maratonatechrs/
url = https://iuri.xyz/maratonatechrs/
project_urls =
    Source Code = https://github.com/iuriguilherme/maratonatechrs/
    Issue Tracker = https://github.com/iuriguilherme/maratonatechrs/issues/
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL
license_files =
    LICENSE
description_file =
    README.md
    CHANGES.txt
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Environment :: Web Environment
    Framework :: Flask
    Framework :: Quart
    Intended Audience :: Customer Service
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    License :: Other/Proprietary License
    Natural Language :: Portuguese (Brazilian)
    Operating System :: OS Independent
    Programming Language :: JavaScript
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Communications
    Topic :: Database
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Other/Nonlisted Topic
    Typing :: Typed
packages = find:
package_dir = src
include_package_data = True
zip_safe = False

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.11
#install_requires =

[files]
packages = find:
package_dir = = src
extra_files =
    CHANGES.txt
    LICENSE
    README.md
